--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "seamless-immutable": "^7.1.2",
-    "superagent": "^3.8.2"
+    "superagent": "^3.8.2",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
